--- a/application.json
+++ b/application.json
@@ -1368,6 +1368,24 @@
                       "permalink": "fb_alerts_ads_cost"
                     }
                   ]
+                },
+                {
+                  "description": "Pause or lower the bid of these adsets. They are performing much lower than your other adsets.",
+                  "excludeFilters": [
+                    "fact.period",
+                    "campaign.name",
+                    "adset.name"
+                  ],
+                  "name": "Adset Alerts",
+                  "permalink": "fb_alerts_adsets",
+                  "variations": [
+                    {
+                      "description": "Pause or lower the bid of these ads. They are performing much lower than your other ads.",
+                      "exploreParams": "marketing_analytics/fb_adset_date_fact?fields=adset.name,campaign.name,fact.total_cost&f[adset.name]=&f[campaign.name]=&f[fact.period]=28+day&f[fact.date_date]=28+days&f[fact.click_rate_or_cost_per_conversion_or_conversion_rate_bad]=Yes&sorts=fact.total_cost+desc&limit=500&vis=%7B%22stacking%22%3A%22%22%2C%22show_value_labels%22%3Afalse%2C%22label_density%22%3A25%2C%22legend_position%22%3A%22center%22%2C%22x_axis_gridlines%22%3Afalse%2C%22y_axis_gridlines%22%3Atrue%2C%22show_view_names%22%3Afalse%2C%22limit_displayed_rows%22%3Afalse%2C%22y_axis_combined%22%3Atrue%2C%22show_y_axis_labels%22%3Atrue%2C%22show_y_axis_ticks%22%3Atrue%2C%22y_axis_tick_density%22%3A%22default%22%2C%22y_axis_tick_density_custom%22%3A5%2C%22show_x_axis_label%22%3Atrue%2C%22show_x_axis_ticks%22%3Atrue%2C%22x_axis_scale%22%3A%22auto%22%2C%22y_axis_scale_mode%22%3A%22linear%22%2C%22ordering%22%3A%22none%22%2C%22show_null_labels%22%3Afalse%2C%22show_totals_labels%22%3Afalse%2C%22show_silhouette%22%3Afalse%2C%22totals_color%22%3A%22%23808080%22%2C%22type%22%3A%22looker_column%22%2C%22show_row_numbers%22%3Atrue%2C%22truncate_column_names%22%3Afalse%2C%22hide_totals%22%3Afalse%2C%22hide_row_totals%22%3Afalse%2C%22table_theme%22%3A%22gray%22%2C%22enable_conditional_formatting%22%3Atrue%2C%22conditional_formatting_include_totals%22%3Afalse%2C%22conditional_formatting_include_nulls%22%3Afalse%2C%22series_labels%22%3A%7B%22fact.average_cost_per_conversion%22%3A%22Cost+Per+Conversion%22%2C%22parent_fact.average_cost_per_conversion%22%3A%22Ad+Group+CPA%22%2C%22fact.average_cost_per_conversion_delta_ratio%22%3A%22CPA+Ratio%22%7D%2C%22conditional_formatting%22%3A%5B%7B%22type%22%3A%22high+to+low%22%2C%22value%22%3Anull%2C%22background_color%22%3Anull%2C%22font_color%22%3Anull%2C%22palette%22%3A%7B%22name%22%3A%22Red+to+White%22%2C%22colors%22%3A%5B%22%23F36254%22%2C%22%23FFFFFF%22%5D%7D%2C%22bold%22%3Afalse%2C%22italic%22%3Afalse%2C%22strikethrough%22%3Afalse%2C%22fields%22%3A%5B%5D%7D%5D%2C%22hidden_fields%22%3A%5B%22adset.name%22%2C%22campaign.name%22%5D%2C%22series_types%22%3A%7B%7D%2C%22colors%22%3A%5B%22%238ac8ca%22%2C%22%237869df%22%2C%22%236e98f9%22%2C%22%23d06180%22%2C%22%23dc9d4f%22%2C%22%234bb86a%22%2C%22%23a4a6a9%22%2C%22%23a6b7ff%22%2C%22%23afe8fd%22%2C%22%23ea9895%22%2C%22%23f1e582%22%5D%2C%22series_colors%22%3A%7B%7D%7D&filter_config=%7B%22adset.name%22%3A%5B%7B%22type%22%3A%22%3D%22%2C%22values%22%3A%5B%7B%22constant%22%3A%22%22%7D%2C%7B%7D%5D%2C%22id%22%3A0%2C%22error%22%3Afalse%7D%5D%2C%22campaign.name%22%3A%5B%7B%22type%22%3A%22%3D%22%2C%22values%22%3A%5B%7B%22constant%22%3A%22%22%7D%2C%7B%7D%5D%2C%22id%22%3A1%2C%22error%22%3Afalse%7D%5D%2C%22fact.period%22%3A%5B%7B%22type%22%3A%22is%22%2C%22values%22%3A%5B%7B%22constant%22%3A%2228+day%22%7D%2C%7B%7D%5D%2C%22id%22%3A2%2C%22error%22%3Afalse%7D%5D%2C%22fact.date_date%22%3A%5B%7B%22type%22%3A%22past%22%2C%22values%22%3A%5B%7B%22constant%22%3A%2228%22%2C%22unit%22%3A%22day%22%7D%2C%7B%7D%5D%2C%22id%22%3A3%2C%22error%22%3Afalse%7D%5D%2C%22fact.click_rate_or_cost_per_conversion_or_conversion_rate_bad%22%3A%5B%7B%22type%22%3A%22is%22%2C%22values%22%3A%5B%7B%22constant%22%3A%22Yes%22%7D%2C%7B%7D%5D%2C%22id%22%3A4%2C%22error%22%3Afalse%7D%5D%7D&dynamic_fields=%5B%5D&origin=share-expanded",
+                      "name": "Adset Alerts",
+                      "permalink": "fb_alerts_adsets_cost"
+                    }
+                  ]
                 }
               ]
             }
