--- a/application.json
+++ b/application.json
@@ -369,6 +369,24 @@
                 "name": "Click Through Rate",
                 "permalink": "click_through_rate",
                 "singleValueReference": "click_through_rate"
+              },
+              {
+                "lookmlID": "marketing_analytics::campaign_metrics_clicks",
+                "name": "Clicks",
+                "permalink": "clicks",
+                "singleValueReference": "clicks"
+              },
+              {
+                "lookmlID": "marketing_analytics::campaign_metrics_impressions",
+                "name": "Impressions",
+                "permalink": "impressions",
+                "singleValueReference": "impressions"
+              },
+              {
+                "lookmlID": "marketing_analytics::campaign_metrics_cost_per_impression",
+                "name": "Cost Per Impression",
+                "permalink": "cost_per_impression",
+                "singleValueReference": "cost_per_impression"
               }
             ],
             "defaultDashboard": "cost_per_conversion"
@@ -408,6 +426,9 @@
                 },
                 "impressions": {
                   "field": "fact.total_impressions"
+                },
+                "cost_per_impression": {
+                  "field": "fact.average_cost_per_impression"
                 }
               }
             }
@@ -1009,6 +1030,24 @@
                 "name": "Click Through Rate",
                 "permalink": "click_through_rate",
                 "singleValueReference": "click_through_rate"
+              },
+              {
+                "lookmlID": "marketing_analytics::fb_campaign_metrics_clicks",
+                "name": "Clicks",
+                "permalink": "clicks",
+                "singleValueReference": "clicks"
+              },
+              {
+                "lookmlID": "marketing_analytics::fb_campaign_metrics_impressions",
+                "name": "Impressions",
+                "permalink": "impressions",
+                "singleValueReference": "impressions"
+              },
+              {
+                "lookmlID": "marketing_analytics::fb_campaign_metrics_cost_per_impression",
+                "name": "Cost Per Impression",
+                "permalink": "cost_per_impression",
+                "singleValueReference": "cost_per_impression"
               }
             ],
             "defaultDashboard": "cost_per_conversion"
@@ -1042,6 +1081,15 @@
                 },
                 "return_on_ad_spend": {
                   "field": "fact.average_value_per_cost"
+                },
+                "clicks": {
+                  "field": "fact.total_clicks"
+                },
+                "impressions": {
+                  "field": "fact.total_impressions"
+                },
+                "cost_per_impression": {
+                  "field": "fact.average_cost_per_impression"
                 }
               }
             }
