--- a/application.json
+++ b/application.json
@@ -1687,6 +1687,13 @@
           "dashboardCollection": {
             "dashboards": [
               {
+                "lookmlID": "marketing_analytics::bing_campaign_metrics_roas",
+                "name": "Return On Ad Spend",
+                "permalink": "roas",
+                "singleValueReference": "roas",
+                "zeroHide": true
+              },
+             {
                 "lookmlID": "marketing_analytics::bing_campaign_metrics_spend",
                 "name": "Spend",
                 "permalink": "spend",
@@ -1778,6 +1785,9 @@
                 },
                 "cost_per_impression": {
                   "field": "fact.average_cost_per_impression"
+                },
+                "roas": {
+                  "field": "fact.average_value_per_cost"
                 }
               }
             }
