--- a/application.json
+++ b/application.json
@@ -57,7 +57,7 @@
       "name": "Campaigns",
       "model": "marketing_analytics",
       "view": "period_fact",
-      "params": "fields=fact.date_period&f[fact.period]=month&f[fact.date_period_comparison_period]=Yes&f[fact.date_period_before_latest]=Yes&sorts=fact.date_period+desc",
+      "params": "fields=fact.date_period&f[fact.period]=28+day&f[fact.date_period_latest]=Yes&sorts=fact.total_cost+desc",
       "keyColumn": "campaign.name",
       "columns": [
         {
@@ -100,7 +100,7 @@
       "name": "Campaigns",
       "model": "marketing_analytics",
       "view": "fb_period_fact",
-      "params": "fields=fact.date_period&f[fact.period]=month&f[fact.date_period_comparison_period]=Yes&f[fact.date_period_before_latest]=Yes&sorts=fact.date_period+desc",
+      "params": "fields=fact.date_period&f[fact.period]=28+day&f[fact.date_period_latest]=Yes&sorts=fact.total_cost+desc",
       "keyColumn": "campaign.name",
       "columns": [
         {
@@ -143,7 +143,7 @@
       "name": "Campaigns",
       "model": "marketing_analytics",
       "view": "li_period_fact",
-      "params": "fields=fact.date_period&f[fact.period]=month&f[fact.date_period_comparison_period]=Yes&f[fact.date_period_before_latest]=Yes&sorts=fact.date_period+desc",
+      "params": "fields=fact.date_period&f[fact.period]=28+day&f[fact.date_period_latest]=Yes&sorts=fact.total_cost+desc",
       "keyColumn": "fact.campaign_name",
       "columns": [
         {
@@ -186,7 +186,7 @@
       "name": "Campaigns",
       "model": "marketing_analytics",
       "view": "bing_ad_group_date_fact",
-      "params": "fields=fact.date_period&f[fact.period]=month&f[fact.date_period_comparison_period]=Yes&f[fact.date_period_before_latest]=Yes&sorts=fact.date_period+desc",
+      "params": "fields=fact.date_period&f[fact.period]=28+day&f[fact.date_period_latest]=Yes&sorts=fact.total_cost+desc",
       "keyColumn": "fact.campaign_name",
       "columns": [
         {
@@ -229,7 +229,7 @@
       "name": "Campaigns",
       "model": "marketing_analytics",
       "view": "cross_channel_ad_impressions",
-      "params": "fields=fact.date_period&f[fact.period]=month&f[fact.date_period_comparison_period]=Yes&f[fact.date_period_before_latest]=Yes&sorts=fact.date_period+desc",
+      "params": "fields=fact.date_period&f[fact.period]=28+day&f[fact.date_period_latest]=Yes&sorts=fact.total_cost+desc",
       "keyColumn": "fact.campaign_name",
       "columns": [
         {
