add pinterest section to app.json

--- a/application.json
+++ b/application.json
@@ -270,6 +270,49 @@
           "field": "fact.average_click_rate"
         }
       ]
+    },
+   {
+      "id": "pi_campaign",
+      "name": "Campaigns",
+      "model": "marketing_analytics",
+      "view": "pi_period_fact",
+      "params": "fields=fact.date_period&f[fact.period]=28+day&f[fact.date_period_latest]=Yes&sorts=fact.total_cost+desc",
+      "keyColumn": "campaign.name",
+      "columns": [
+        {
+          "name": "Campaign",
+          "field": "campaign.name"
+        },
+        {
+          "name": "Spend",
+          "field": "fact.total_cost"
+        },
+        {
+          "name": "Conv.",
+          "label": "# of Conversions",
+          "field": "fact.total_conversions"
+        },
+        {
+          "name": "CPA",
+          "label": "Cost Per Acquistion (Conversion)",
+          "field": "fact.average_cost_per_conversion"
+        },
+        {
+          "name": "Conv. Rate (CR)",
+          "label": "Conversion Rate",
+          "field": "fact.average_conversion_rate"
+        },
+        {
+          "name": "CPC",
+          "label": "Cost Per Click",
+          "field": "fact.average_cost_per_click"
+        },
+        {
+          "name": "CTR",
+          "label": "Click though Rate",
+          "field": "fact.average_click_rate"
+        }
+      ]
     }
   ],
   "name": "Digital Marketing",
@@ -2381,6 +2424,190 @@
         }
       ],
       "permalink": "all_sources"
+    },
+    {
+      "description": "",
+      "icon": "marketing-analytics/social",
+      "name": "Pinterest",
+      "pages": [
+          {
+          "icon": "marketing-analytics/source-linkedin",
+          "name": "Overview",
+          "permalink": "overview",
+          "type": "dashboardCollection",
+          "dashboardCollection": {
+            "dashboards": [
+              {
+                "lookmlID": "marketing_analytics::pinterest_overview",
+                "name": "Default",
+                "permalink": ""
+              }
+            ]
+          },
+      "filters": [
+        {
+          "defaultValue": "28 day",
+          "field": "fact.period",
+          "name": "Time Frame",
+          "type": "TimeFrame",
+          "dashboardAlias": "Period"
+        },
+        {
+          "autoSuggest": {
+            "model": "marketing_analytics",
+            "view": "pi_period_fact"
+          },
+          "field": "fact.account_name",
+          "dashboardAlias": "Account",
+          "name": "Account",
+          "type": "Select"
+        },
+        {
+          "field": "fact.campaign_name",
+          "name": "Campaign",
+          "type": "Table",
+          "tableID": "pi_campaign"
+        }
+      ]
+    },
+    {
+      "dashboardCollection": {
+        "dashboards": [
+          {
+            "lookmlID": "marketing_analytics::pi_campaign_metrics_spend",
+            "name": "Spend",
+            "permalink": "spend",
+            "singleValueReference": "spend"
+          },
+          {
+            "lookmlID": "marketing_analytics::pi_campaign_metrics_conversions",
+            "name": "Conversions",
+            "permalink": "conversions",
+            "singleValueReference": "conversions"
+          },
+          {
+            "lookmlID": "marketing_analytics::pi_campaign_metrics_cost_per_conversion",
+            "name": "Cost Per Conversion",
+            "permalink": "cost_per_conversion",
+            "singleValueReference": "cost_per_conversion"
+          },
+          {
+            "lookmlID": "marketing_analytics::pi_campaign_metrics_conversion_rate",
+            "name": "Conversion Rate",
+            "permalink": "conversion_rate",
+            "singleValueReference": "conversion_rate"
+          },
+          {
+            "lookmlID": "marketing_analytics::pi_campaign_metrics_cost_per_click",
+            "name": "Cost Per Click",
+            "permalink": "cost_per_click",
+            "singleValueReference": "cost_per_click"
+          },
+          {
+            "lookmlID": "marketing_analytics::pi_campaign_metrics_ctr",
+            "name": "Click Through Rate",
+            "permalink": "click_through_rate",
+            "singleValueReference": "click_through_rate"
+          },
+          {
+            "lookmlID": "marketing_analytics::pi_campaign_metrics_roas",
+            "name": "Return On Ad Spend",
+            "permalink": "roas",
+            "singleValueReference": "roas",
+            "zeroHide": true
+          }
+        ],
+        "defaultDashboard": "cost_per_conversion"
+      },
+      "singleValuesSources": [
+        {
+          "model": "marketing_analytics",
+          "view": "pinterest_ad_impressions",
+          "params": "&sorts=fact.date_period+desc&fields=fact.date_period,fact.date_end_of_period&f[fact.date_period_before_latest]=Yes&f[fact.date_period_comparison_period]=Yes",
+          "fields": {
+            "spend": {
+              "inverseChange": true,
+              "field": "fact.total_cost"
+            },
+            "conversions": {
+              "field": "fact.total_conversions"
+            },
+            "cost_per_conversion": {
+              "inverseChange": true,
+              "field": "fact.average_cost_per_conversion"
+            },
+            "conversion_rate": {
+              "field": "fact.average_conversion_rate"
+            },
+            "cost_per_click": {
+              "inverseChange": true,
+              "field": "fact.average_cost_per_click"
+            },
+            "click_through_rate": {
+              "field": "fact.average_click_rate"
+            },
+            "roas": {
+              "field": "fact.average_value_per_cost"
+            }
+          }
+        }
+      ],
+      "filters": [
+        {
+          "defaultValue": "28 day",
+          "field": "fact.period",
+          "name": "Time Frame",
+          "type": "TimeFrame",
+          "dashboardAlias": "Period"
+        },
+        {
+          "autoSuggest": {
+            "model": "marketing_analytics",
+            "view": "pinterest_ad_impressions"
+          },
+          "field": "fact.account_name",
+          "dashboardAlias": "Account",
+          "name": "Account",
+          "type": "Select"
+        },
+        {
+          "autoSuggest": {
+            "model": "marketing_analytics",
+            "view": "pi_campaign_metrics_ad_impressions"
+          },
+          "field": "fact.channel",
+          "dashboardAlias": "Channel",
+          "name": "Channel",
+          "type": "Select"
+        },
+        {
+          "field": "fact.campaign_name",
+          "dashboardAlias": "Campaign",
+          "name": "Campaign",
+          "type": "Table",
+          "tableID": "pi_campaign"
+        },
+        {
+          "autoSuggest": {
+            "model": "marketing_analytics",
+            "view": "pinterest_ad_impressions"
+          },
+          "facetedBy": [
+            "fact.campaign_name"
+          ],
+          "field": "fact.ad_group_name",
+          "dashboardAlias": "Ad Group",
+          "name": "Ad Group",
+          "type": "Select"
+        }
+      ],
+      "name": "Campaigns",
+      "permalink": "pinterest",
+      "icon": "marketing-analytics/campaigns",
+      "type": "dashboardCollection"
     }
-  ]
+  ],
+  "permalink": "pinterest"
+}
+]
 }
