--- a/application.json
+++ b/application.json
@@ -36,7 +36,7 @@
           "field": "fact.average_cost_per_conversion"
         },
         {
-          "name": "Conv. Rate (CR)",
+          "name": "Conv. %",
           "label": "Conversion Rate",
           "field": "fact.average_conversion_rate"
         },
@@ -79,7 +79,7 @@
           "field": "fact.average_cost_per_conversion"
         },
         {
-          "name": "Conv. Rate (CR)",
+          "name": "Conv. %",
           "label": "Conversion Rate",
           "field": "fact.average_conversion_rate"
         },
@@ -122,7 +122,7 @@
           "field": "fact.average_cost_per_conversion"
         },
         {
-          "name": "Conv. Rate (CR)",
+          "name": "Conv. %",
           "label": "Conversion Rate",
           "field": "fact.average_conversion_rate"
         },
@@ -165,7 +165,7 @@
           "field": "fact.average_cost_per_conversion"
         },
         {
-          "name": "Conv. Rate (CR)",
+          "name": "Conv. %",
           "label": "Conversion Rate",
           "field": "fact.average_conversion_rate"
         },
@@ -212,7 +212,7 @@
           "field": "fact.average_cost_per_conversion"
         },
         {
-          "name": "Conv. Rate (CR)",
+          "name": "Conv. %",
           "label": "Conversion Rate",
           "field": "fact.average_conversion_rate"
         },
@@ -255,7 +255,7 @@
           "field": "fact.average_cost_per_conversion"
         },
         {
-          "name": "Conv. Rate (CR)",
+          "name": "Conv. %",
           "label": "Conversion Rate",
           "field": "fact.average_conversion_rate"
         },
